syntax = "proto3";

package simcart.api.cart;

option go_package = "simcart/api/pb/cartpb;cartpb";
import "cartpb/enums.proto";
import "commonpb/enums.proto";

// CartRequest represents the request struct that comes from the user 
// side. It may bear a non-empty cartId that would be used to manipulate the cart content.
message CartRequest {
   string sku = 1;
   uint64 qty = 2;
   // bid or offerred price
   int64 bid = 3; 
   string cartUUID = 4;
   simcart.api.common.Currency cuurency = 5;
   string owner = 6;
   string itemId = 7;
}
message CartDetail {
   string itemUUID = 1;
   uint64 productId = 2;
   uint64 qty = 3;
   float discount = 4;

}
message CartResponse {
    string cartUUID = 1;
    CartStatus status = 2;
    repeated CartDetail details = 3;

}
message CartFilter {
    string owner = 1;
    repeated CartStatus status = 2;
}
message CartRequests {
    repeated CartResponse responses = 1;
}

message CheckoutResponse {
    string cartUUID = 1;
    string refrence = 2;
    string paymentUrl = 3;
}